Cleaned Text Data

--- a/SecondCapstone/SecondCapstone.ipynb
+++ b/SecondCapstone/SecondCapstone.ipynb
@@ -2915,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2938,7 +2938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -2970,35 +2970,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         00  000        01   02   03   04   05   06   07   08     ...      \\\n",
-      "0  0.000000  0.0  0.000000  0.0  0.0  0.0  0.0  0.0  0.0  0.0     ...       \n",
-      "1  0.000000  0.0  0.089834  0.0  0.0  0.0  0.0  0.0  0.0  0.0     ...       \n",
-      "2  0.000000  0.0  0.028754  0.0  0.0  0.0  0.0  0.0  0.0  0.0     ...       \n",
-      "3  0.000000  0.0  0.000000  0.0  0.0  0.0  0.0  0.0  0.0  0.0     ...       \n",
-      "4  0.027421  0.0  0.000000  0.0  0.0  0.0  0.0  0.0  0.0  0.0     ...       \n",
+      "   ____  _____  _______  ________   aa  aapi  aapis  abandoned  abandoning  \\\n",
+      "0   0.0    0.0      0.0       0.0  0.0   0.0    0.0        0.0         0.0   \n",
+      "1   0.0    0.0      0.0       0.0  0.0   0.0    0.0        0.0         0.0   \n",
+      "2   0.0    0.0      0.0       0.0  0.0   0.0    0.0        0.0         0.0   \n",
+      "3   0.0    0.0      0.0       0.0  0.0   0.0    0.0        0.0         0.0   \n",
+      "4   0.0    0.0      0.0       0.0  0.0   0.0    0.0        0.0         0.0   \n",
       "\n",
-      "   yunque  zero  zimbabwe  zimbabweby  zimondi  zone  zonepursuant  zones  \\\n",
-      "0     0.0   0.0       0.0         0.0      0.0   0.0           0.0    0.0   \n",
-      "1     0.0   0.0       0.0         0.0      0.0   0.0           0.0    0.0   \n",
-      "2     0.0   0.0       0.0         0.0      0.0   0.0           0.0    0.0   \n",
-      "3     0.0   0.0       0.0         0.0      0.0   0.0           0.0    0.0   \n",
-      "4     0.0   0.0       0.0         0.0      0.0   0.0           0.0    0.0   \n",
+      "   abate     ...      yunque  zero  zimbabwe  zimbabweby  zimondi  zone  \\\n",
+      "0    0.0     ...         0.0   0.0       0.0         0.0      0.0   0.0   \n",
+      "1    0.0     ...         0.0   0.0       0.0         0.0      0.0   0.0   \n",
+      "2    0.0     ...         0.0   0.0       0.0         0.0      0.0   0.0   \n",
+      "3    0.0     ...         0.0   0.0       0.0         0.0      0.0   0.0   \n",
+      "4    0.0     ...         0.0   0.0       0.0         0.0      0.0   0.0   \n",
       "\n",
-      "   zoning  zvinavashe  \n",
-      "0     0.0         0.0  \n",
-      "1     0.0         0.0  \n",
-      "2     0.0         0.0  \n",
-      "3     0.0         0.0  \n",
-      "4     0.0         0.0  \n",
+      "   zonepursuant  zones  zoning  zvinavashe  \n",
+      "0           0.0    0.0     0.0         0.0  \n",
+      "1           0.0    0.0     0.0         0.0  \n",
+      "2           0.0    0.0     0.0         0.0  \n",
+      "3           0.0    0.0     0.0         0.0  \n",
+      "4           0.0    0.0     0.0         0.0  \n",
       "\n",
-      "[5 rows x 12820 columns]\n"
+      "[5 rows x 9078 columns]\n"
      ]
     }
    ],
@@ -3012,7 +3012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -3056,7 +3056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -3137,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -3145,7 +3145,7 @@
      "output_type": "stream",
      "text": [
       "Democrat [(-9.312960631310425, 'aapi'), (-9.312960631310425, 'aapis'), (-9.312960631310425, 'abandoning'), (-9.312960631310425, 'abate'), (-9.312960631310425, 'abduction'), (-9.312960631310425, 'abetted'), (-9.312960631310425, 'aboriginal'), (-9.312960631310425, 'abortion'), (-9.312960631310425, 'abortions'), (-9.312960631310425, 'absentee'), (-9.312960631310425, 'absolutely'), (-9.312960631310425, 'academically'), (-9.312960631310425, 'academics'), (-9.312960631310425, 'academies'), (-9.312960631310425, 'acceleration'), (-9.312960631310425, 'accelerators'), (-9.312960631310425, 'accession'), (-9.312960631310425, 'accident'), (-9.312960631310425, 'accidental'), (-9.312960631310425, 'accidents')]\n",
-      "Republican [(-9.312960631310425, 'aapi'), (-9.312960631310425, 'aapis'), (-9.312960631310425, 'abandoning'), (-9.312960631310425, 'abate'), (-9.312960631310425, 'abduction'), (-9.312960631310425, 'abetted'), (-9.312960631310425, 'aboriginal'), (-9.312960631310425, 'abortion'), (-9.312960631310425, 'abortions'), (-9.312960631310425, 'absentee'), (-9.312960631310425, 'absolutely'), (-9.312960631310425, 'academically'), (-9.312960631310425, 'academics'), (-9.312960631310425, 'academies'), (-9.312960631310425, 'acceleration'), (-9.312960631310425, 'accelerators'), (-9.312960631310425, 'accession'), (-9.312960631310425, 'accident'), (-9.312960631310425, 'accidental'), (-9.312960631310425, 'accidents')]\n"
+      "Republican [(-7.46808397325453, 'appropriate'), (-7.4634561711003595, 'state'), (-7.44972920771878, 'pursuant'), (-7.441692240001252, 'emergency'), (-7.440254371186375, 'intelligence'), (-7.422134274269941, 'board'), (-7.416209990001586, 'government'), (-7.366811197595012, 'office'), (-7.356263595077068, 'director'), (-7.355436290549537, 'department'), (-7.317177652617861, 'property'), (-7.272451913657754, 'council'), (-7.261817962616167, 'inserting'), (-7.1820332002378455, 'security'), (-7.170478436816822, 'agency'), (-7.098418748732813, 'federal'), (-7.055249116485436, 'national'), (-6.900204052931642, 'amended'), (-6.884929084904144, 'act'), (-6.446585498241103, 'secretary')]\n"
      ]
     }
    ],
@@ -3159,7 +3159,7 @@
     "\n",
     "print(class_labels[0], feat_with_weights[:20])\n",
     "\n",
-    "print(class_labels[1], feat_with_weights[:20])\n"
+    "print(class_labels[1], feat_with_weights[-20:])\n"
    ]
   },
   {
@@ -3533,14 +3533,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First [(-7.667166762137676, 'emergency'), (-7.658579395411581, 'policy'), (-7.609410028399103, 'information'), (-7.589234480747926, 'board'), (-7.574662356766643, 'office'), (-7.566438110456785, 'inserting'), (-7.547618812524375, 'pursuant'), (-7.5364678745693015, 'striking'), (-7.469335538209486, 'council'), (-7.451351517054786, 'department'), (-7.446648745305833, 'director'), (-7.4168710819539765, 'government'), (-7.368089582166444, 'security'), (-7.295745583190252, 'amended'), (-7.278980553641146, 'agency'), (-7.271739863054597, 'property'), (-7.236876895832859, 'federal'), (-7.218463086261562, 'act'), (-7.1853352246022695, 'national'), (-6.892801944648266, 'secretary')]\n",
+      "First [(-9.280455929081269, '____'), (-9.280455929081269, '_____'), (-9.280455929081269, '_______'), (-9.280455929081269, '________'), (-9.280455929081269, 'aapi'), (-9.280455929081269, 'aapis'), (-9.280455929081269, 'abbreviations'), (-9.280455929081269, 'abedinico'), (-9.280455929081269, 'abetted'), (-9.280455929081269, 'abiding'), (-9.280455929081269, 'aboard'), (-9.280455929081269, 'aboriginal'), (-9.280455929081269, 'abortion'), (-9.280455929081269, 'abortions'), (-9.280455929081269, 'absolom'), (-9.280455929081269, 'absolutely'), (-9.280455929081269, 'abused'), (-9.280455929081269, 'abusers'), (-9.280455929081269, 'abusesby'), (-9.280455929081269, 'academically')]\n",
       "Second [(-7.667166762137676, 'emergency'), (-7.658579395411581, 'policy'), (-7.609410028399103, 'information'), (-7.589234480747926, 'board'), (-7.574662356766643, 'office'), (-7.566438110456785, 'inserting'), (-7.547618812524375, 'pursuant'), (-7.5364678745693015, 'striking'), (-7.469335538209486, 'council'), (-7.451351517054786, 'department'), (-7.446648745305833, 'director'), (-7.4168710819539765, 'government'), (-7.368089582166444, 'security'), (-7.295745583190252, 'amended'), (-7.278980553641146, 'agency'), (-7.271739863054597, 'property'), (-7.236876895832859, 'federal'), (-7.218463086261562, 'act'), (-7.1853352246022695, 'national'), (-6.892801944648266, 'secretary')]\n"
      ]
     }
@@ -3552,7 +3552,7 @@
     "\n",
     "feat_with_weights = sorted(zip(nb_classifier.coef_[0], feature_names))\n",
     "\n",
-    "print(class_labels[0], feat_with_weights[-20:])\n",
+    "print(class_labels[0], feat_with_weights[:20])\n",
     "\n",
     "print(class_labels[1], feat_with_weights[-20:])"
    ]
